--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Nutthawoot P. - Full-Stack Developer Portfolio. Explore my projects and skills in web development." />
+    <meta name="description" content="Nutthawoot P. Portfolio. Explore my projects and skills." />
     <meta name="keywords" content="Full-Stack Developer, React, TypeScript, Node.js, Web Development, Portfolio" />
     <meta name="author" content="Nutthawoot P." />
-    <meta property="og:title" content="Nutthawoot P. - Full-Stack Developer Portfolio" />
-    <meta property="og:description" content="Explore my projects and experience in web development." />
+    <meta property="og:title" content="Nutthawoot P. Portfolio" />
+    <meta property="og:description" content="Explore my projects and experience." />
     <meta property="og:type" content="website" />
-    <title>Nutthawoot P. - Full-Stack Developer Portfolio</title>
+    <title>Nutthawoot P. Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
