fix: Update keywords in index.html
- Changed keywords from 'Full-Stack Developer' to 'Data Analyst' in index.html.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/job-portfolio.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Nutthawoot P. Portfolio. Explore my projects and skills." />
-    <meta name="keywords" content="Full-Stack Developer, React, TypeScript, Node.js, Web Development, Portfolio" />
+    <meta name="keywords" content="Data Analyst, React, TypeScript, Node.js, Web Development, Portfolio" />
     <meta name="author" content="Nutthawoot P." />
     <meta property="og:title" content="Nutthawoot P. Portfolio" />
     <meta property="og:description" content="Explore my projects and experience." />
